# lark-computer

./: Cargo.toml  README.md
src/: alu.rs  gates.rs  lib.rs  main.rs  mem.rs  mux.rs
src/mem/: mod.rs  ram16k.rs  ram4k.rs  ram512.rs  ram64.rs  ram8.rs  register.rs
tests/unit/: alu_test.rs  gates_test.rs  mem_test.rs  mod.rs  ram16k_test.rs  ram4k_test.rs  ram512_test.rs  ram64_test.rs  ram8_test.rs  register_test.rs
